# usaco-green-agent

./: .gitignore  Dockerfile  README.md  parse_dataset.py  pyproject.toml  test_client.py
src/: agent.py  evaluator.py  executor.py  judge.py  server.py
